# Hand-volume-control

./: .gitignore  CMakeLists.txt  README.md
include/: convnext_base_model.hpp  dataset.hpp  detector.hpp  hand_model_base.hpp  model.hpp  utils.hpp  volume_control.hpp  yolo_model.hpp
scripts/: tfrecords2csv_png.py
src/: convnext_base_model.cpp  dataset.cpp  dataset.py  main.cpp  model.cpp  model.ipynb  model.py  train.cpp  train.py  train_utils.py  utils.cpp  utils.py  volume_control.cpp  yolo_model.cpp
